gcc/testsuite/gm2/iso/fail/constsubrange3.mod
MODULE constsubrange3 ;

VAR
   a: [10..20] ;
BEGIN
   a := 8
END constsubrange3.
